--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -1,24 +1,117 @@
-.container {
-    max-width: 900px;
-    margin: 0 auto;
-  }
-  
-  input[type="text"] {
-    width: 100%;
-    max-width: 300px;
-  }
-  
-  .table {
-    margin: 0 auto;
-  }
-  
+.top-bar, .bottom-bar {
+  width: 100%;
+  height: 50px; 
+  background-color: #fff; 
+}
+
+.dark-mode .top-bar, .dark-mode .bottom-bar {
+  background-color: #2e2e2e !important; 
+}
+
+input[type="text"] {
+  width: 100%;
+  max-width: 300px;
+}
+
+.table {
+  margin: 0 auto;
+}
+
 .header-container {
-display: flex;
-flex-direction: column;
-align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .sort-icons {
-margin-top: 5px; /* Add some space between title and icons */
+  margin-top: 5px;
 }
-  
+
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%; 
+}
+
+.container {
+  max-width: 900px;
+  margin: 0 auto;
+  padding: 0;
+  min-height: 100%; 
+  display: flex;
+  flex-direction: column;
+  justify-content: center; 
+}
+
+.table-container {
+  flex-grow: 1;
+}
+
+.dark-mode {
+  background-color: #2e2e2e !important; 
+  color: #e0e0e0 !important;
+  height: 100%; 
+  min-height: 100vh; 
+  display: flex;
+  flex-direction: column;
+}
+
+.dark-mode .table-container {
+  flex-grow: 1;
+}
+
+.bottom-bar {
+  height: 50px;
+}
+
+.dark-mode table {
+  background-color: #000 !important; 
+  color: #fff !important; 
+  border-collapse: collapse !important;
+}
+
+.dark-mode thead th {
+  background-color: #444 !important; 
+  color: #fff !important;
+  border: 1px solid #fff !important;
+}
+
+.dark-mode tbody tr:nth-child(even),
+.dark-mode tbody tr:nth-child(odd) {
+  background-color: #000 !important; 
+}
+
+.dark-mode th, .dark-mode td {
+  border: 1px solid #fff !important;
+  color: #fff !important;
+  background-color: #000 !important;
+}
+
+.dark-mode .form-control {
+  background-color: #444 !important;
+  color: #e0e0e0 !important;
+  border: 1px solid #666 !important;
+}
+
+.dark-mode .form-check-label {
+  color: #e0e0e0 !important;
+}
+
+.dark-mode .btn, .dark-mode a {
+  color: #fff !important;
+}
+
+.dark-mode a[href="#"] {
+  color: #007bff !important; 
+}
+
+.dark-mode ::placeholder {
+  color: #e0e0e0 !important;
+  opacity: 1;
+}
+
+
+
+
+
+
