--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -31,16 +31,11 @@ html, body {
   margin: 0;
   padding: 0;
   height: 100%; 
-  background-color: #fff; 
 }
 
-.dark-mode html, .dark-mode body {
-  background-color: #000 !important; 
-}
-
-html {
+/* html {
   overflow-y: scroll;
-}
+} */
 
 .container {
   max-width: 900px;
