--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -38,18 +38,57 @@ html {
 }
 
 .table-responsive {
-  overflow-x: auto; /* Enable horizontal scrolling */
+  overflow-x: auto; 
 }
 
-/* Apply only for smaller screens like iPhones */
+/* Anything with "@media screen" is to support phone browsers */
 @media screen and (max-width: 768px) {
   .table {
-    width: 100%; /* Ensure table doesn't extend beyond the screen width */
+    width: 100%; 
   }
 
   .table-container {
     padding-left: 0;
     padding-right: 0;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .filter-container {
+    flex-direction: column; 
+    align-items: center; 
+    justify-content: center; 
+  }
+
+  .filter-container .form-group {
+    width: 100%; 
+    margin-right: 0; 
+    margin-bottom: 20px; 
+    display: flex;
+    flex-direction: column; 
+    align-items: center; 
+  }
+
+  .filter-container label {
+    width: 100%;
+    text-align: center; 
+    margin-bottom: 5px;
+  }
+
+  .filter-container input, .filter-container select {
+    width: 90%; 
+    max-width: 400px; 
+    margin: 0 auto; 
+  }
+}
+
+@media screen and (min-width: 769px) {
+  .filter-container .form-group {
+    margin-right: 20px; 
+  }
+
+  .filter-container .form-group:last-child {
+    margin-right: 0; 
   }
 }
 
